--- a/src/Blazor/Layout/NavMenu.razor
+++ b/src/Blazor/Layout/NavMenu.razor
@@ -20,6 +20,11 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="competitions">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Competitions
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="weather">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
             </NavLink>
